# coral_edgetpu

./: CMakeLists.txt
include/common_engine/: engine.h
include/ultraface_engine/: ultraface_engine.h
scripts/detection/: detect_cpu.sh  detect_edgetpu.sh
scripts/pose_estimation/: pose_cpu_353x481.sh
scripts/ultraface/: ultraface_cpu.sh  ultraface_edgetpu.sh
src/: classification_camera.cc  detection_camera.cc  humanpose_camera.cc  ultraface_camera.cc
src/common_engine/: engine.cc
src/image_preprocessing/: img_prep.cc
src/ultraface_engine/: ultraface_engine.cc
test_data/ultraface/: version-slim-320_without_postprocessing_quantized.tflite  version-slim-320_without_postprocessing_quantized_edgetpu.tflite
